--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,21 +1,6 @@
-//                   Settings
+
 @import "reset.scss";
-
-
-
-
-@mixin font($font_name, $file_name, $weight, $style) {
-    @font-face {
-    font-family: $font_name;
-    font-display: swap;
-    src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
-    font-weight: #{$weight};
-    font-style: #{$style};    }
-}
-@import "fonts";
-
- //                 Settings
-
+@import "fonts.scss";
 
 @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Yusei+Magic&display=swap');
@@ -65,136 +50,47 @@ header{
     
 }
 
+.rates {
+    margin-top:50px;
 
-
-/*  */
-
- 
-
-.new-date{
-    color: blanchedalmond;
-    font-size: 25px;
-    padding-left: 10px;
+    .rates-content {
+        width: 580px;
+        margin: 0 auto;
+        .rates-items {
+            display: flex;
+            justify-content: space-around;
+            border-bottom: 2px solid white;
+            padding-bottom: 5px;
+                & h4{
+                    color: #ffff;
+                    font-weight: 700;
+                    font-size: 25px;
+                    margin-left: 85px;
+                }
+        }
+        .rates-currency {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px 0 30px 0;
+            .rates-currency__title {
+                color: #ffff;
+                font-weight: 700;
+                font-size: 40px;
+            }
+            .rates-currency__value {
+                min-width: 107px;
+                text-align: center;
+                border: 3px solid white;
+                border-radius: 10px;
+                padding: 5px;
+                color: #b2cc25;
+                font-weight: 700;
+                font-size: 40px;
+            }
+        }
+    }
 }
-
-
-// 
-
-.container-converter{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-// .converter-title{
-//     padding: 1rem;
-//     border: 2px solid black;
-//     background-color: #b2cc25;
-//     border-radius: 15px;
-//     margin-bottom: 1rem;
-//     margin-top: 1.5rem;
-// }
-
-.block-converter{
-    display: flex;
-    // flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 80px;
-    width: 500px;
-    height: 250px;
-    padding: 10px;
-    background: rgb(167,170,171);
-    background: linear-gradient(90deg, rgba(167,170,171,1) 20%, rgba(214,214,210,0.5998774509803921) 39%, rgba(214,214,210,1) 62%, rgba(167,170,171,1) 82%);
-    border-radius: 20px;
-    width: 90%;
-}
-.r{
-    
-}
-.first-currency,.second-currency{
-    display: flex;
-    flex-direction: column;
-}
-.first-currency__select,.second-currency__select{
-    margin-bottom: 5px;
-    padding: 5px 15px;
-    border-radius: 5px;
-    background-color: bisque;
-    color: black;
-    font-size: 15px;
-    width: 90%;
-    
-}
-.first-currency__input,.second-currency__input{
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: bisque;
-    color: black;
-    font-size: 15px;
-    width: 90%;
-}
-.exhange{
-    margin: 0 10px;
-}
-.error{
-    border: 2px solid red;
-}
-
-
-
-/*  */
-.site-content{
-    width: 580px;
-    margin: 0 auto;
-}
-.block-choice{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 50px;
-    border-bottom: 2px solid white;
-    padding-bottom: 5px;
-}
-.block-choice h4{
-    color: #ffff;
-    font-weight: 700;
-    font-size: 25px;
-    margin-left: 85px;
-}
-.block-price{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    margin-top: 10px;
-}
-.block-price:hover{
-    transition-duration: 1.5s;
-    background-color: rgb(41, 68, 109);
-    padding: 20px;
-    border-radius: 15px;
-}
-.name-value{
-    color: #ffff;
-    font-weight: 700;
-    font-size: 40px;
-    padding-top: 7px;
-}
-.currency-buy,.currency-sale {
-    min-width: 107px;
-    text-align: center;
-    border: 3px solid white;
-    border-radius: 10px;
-    padding: 5px;
-    color: #b2cc25;
-    font-weight: 700;
-    font-size: 40px;
-}
-
-
-
 
 .converter {
     display: flex;
@@ -205,185 +101,43 @@ header{
         color: #ffff;
         margin-bottom: 40px;
     }
-}
-.converter-content {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid;
-    padding: 100px 50px;
-    .currency-base,.currency-to-change{
+    .converter-content {
+        position: relative;
         display: flex;
-        flex-direction: column; 
-        .currency-base__select,.currency-to-change__select {
-            padding: 7px;
-        }
-        .currency-base__input,.currency-to-change__input {
-            margin-top: 5px;
-            padding: 7px;
-            width: 100%;
-        }
-    }
-    .exhange {
-        & i{
-            font-size:30px;
-        }
-    }
-    .converter-title {
-        padding: 1rem;
-        border: 2px solid black;
-        background-color: #b2cc25;
-        border-radius: 15px;
-        position: absolute;
-        bottom:10px;
-        & button{
-            font-size:17px;
-            background: transparent;
-        }
-    } 
-    
-}
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 2100px){
-    .block-converter{
-        width: 50%;
-    }
-    .container {
-        // max-width: 70%;
-        margin: 0 auto;
-    }
-}
-@media screen and (max-width: 786px){
-    .block-converter{
-        width: 70%;
-    }
-    header{
-        margin-top: 60px;
-    }
-    .header-title{
-        font-size: 75px;
-    }
-    .name-value{
-        font-size: 35px;
-        padding-top: 12px;
-    }
-    .block-choice h4{
-        margin-left: 13%;
-    }
-    .site-content{
-        max-width: 470px;
-    }
-}
-@media screen and (max-width: 585px){
-    .block-converter{
-        width: 95%;
-    }
-    // .container{
-    //     max-width: 100%;
-    // }
-    .header-title{
-        font-size: 65px;
-    }
-    .site-title p{
-        font-size: 25px;
-    }
-    .block-choice h4{
-        margin-left: 11%;
-    }
-    .site-content {
-        max-width: 430px;
-    }
-}
-@media screen and (max-width: 480px){
-    // .first-currency, .second-currency{
-    //     font-size: 35px;
-    //     min-width: 95px;
-   
-    // }
-    .name-value {
-        font-size: 26px;
-        padding-top: 14px;
-    }
-    .block-choice{
-        margin-top: 40px;
-    }
-    .block-choice h4{
-        margin-left: 8%;
-    }
-    .site-content{
-        max-width: 370px;
-    }
-}
-@media screen and (max-width: 412px){
-    header{
-        margin-top: 40px;
-    }
-    .header-title {
-        font-size: 55px;
-    }
-    .date{
-        display: flex;
-        flex-direction: column;
+        align-items: center;
         justify-content: center;
-        padding-top: 0px;
-    }
-    .site-title p {
-        font-size: 20px;
-    }
-    .new-date{
-        padding-top: 5px;
-    }
-    .block-choice {
-        margin-top: 20px;
-    }
-    .site-content {
-        max-width: 335px;
-    }
-    .block-choice h4 {
-        margin-left: 6%;
-        font-size: 24px;
-    }
-    // .first-currency, .second-currency {
-    //     font-size: 30px;
-    //     min-width: 80px;
-    // }
-    
-}
-@media screen and (max-width: 365px){
-    .site-content {
-        max-width: 305px;
-    }
-    .block-choice h4 {
-        margin-left: 8%;
-        font-size: 20px;
-    }
-}
-@media screen and (max-width: 330px){
-    .header-title {
-        font-size: 50px;
-    }
-    .first-currency, .second-currency {
-        font-size: 25px;
-        min-width: 70px;
-    }
-    .name-value{
-        font-size: 20px;
-        padding-top: 12px;
-    }
-    .block-choice h4{
-        font-size: 19px;
-    }
-    .site-content {
-        max-width: 280px;
+        border: 2px solid;
+        padding: 100px 50px;
+        .currency-base,.currency-to-change{
+            display: flex;
+            flex-direction: column; 
+            .currency-base__select,.currency-to-change__select {
+                padding: 7px;
+            }
+            .currency-base__input,.currency-to-change__input {
+                margin-top: 5px;
+                padding: 7px;
+                width: 100%;
+            }
+        }
+        .exhange {
+            margin: 0 10px;
+            & i{
+                font-size:30px;
+            }
+        }
+        .converter-button {
+            padding: 1rem;
+            border: 2px solid black;
+            background-color: #b2cc25;
+            border-radius: 15px;
+            position: absolute;
+            bottom:10px;
+            & button{
+                font-size:17px;
+                background: transparent;
+            }
+        } 
     }
 }
+
